package com.kdt.jpa.order;

public enum OrderStatus {
    OPENED, CANCELLED
}